--- a/referentiel/templates/referentiel/referentiel_view.html
+++ b/referentiel/templates/referentiel/referentiel_view.html
@@ -1,15 +1,19 @@
+  
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Administration du Referentiel</title>
-</head>
-    {%include 'navigationBar.html' %}
 
-    <body>
-        {%bloc content %}
-        
-        {%endblock content %}
-    </body>
+
+</head>
+
+<body>
+    {%include 'referentiel/navigationBar.html' %}
+    {%block content %}
+
+    {%endblock content %}
+</body>
 
 
 </html>
