--- a/Commandes/templates/Commandes/reponseValiderCommande.html
+++ b/Commandes/templates/Commandes/reponseValiderCommande.html
@@ -15,4 +15,4 @@
 {% endif %}
 <a href="{% url 'commandes:home' %}">Page commandes</a>
 <a href="{% url 'commandes:createCommandeIndividu' %}">Nouvelle Commande</a>
-{%endblock content %
+{%endblock content %}
